Fix: Navbar being too large to fit on screen

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -152,7 +152,7 @@
       position: fixed;
       top: 0;
       right: -101%;
-      height: 100vh;
+      height: 89dvh;
       width: 70%;
       top: 4.8rem;
       flex-direction: column;
